--- a/src/scss/components/_chatbox.scss
+++ b/src/scss/components/_chatbox.scss
@@ -73,7 +73,7 @@
     display: inline-block;
     width: auto;
     height: 18px;
-    vertical-align: text-top;
+    vertical-align: -30%;
   }
 
   &:hover,
